EA-2709: Fix error while registering organizations
- make sameAs mutable so more elements can be added to it